--- a/style.css
+++ b/style.css
@@ -26,4 +26,114 @@
   --clr-primary-400: #8ea8da;
 
   --br: 1rem;
+
+
 }
+
+
+/* STYLES BY ME */
+
+/* resets */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: var(--ff-serif);
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+ul[class],
+ol[class] {
+  list-style: none;
+  padding: 0;
+}
+
+
+/* genral layout */
+
+section {
+  padding:var(--my-space, calc(var(--br) * 2)) var(--br); 
+}
+
+.flow-content-large > * + * {
+  margin-top: calc(var(--br) * 2 );
+}
+
+.flow-content-small > * + * {
+  margin-top: var(--br);
+}
+
+
+/* genral styling */
+
+.container {
+  max-width: 50rem;
+  margin: auto;
+}
+
+.hero {
+  --my-space: 2rem;
+}
+
+.about {
+  --my-space: 2.625rem;
+}
+
+.blog {
+  --my-space: 6rem;
+}
+
+.inbox {
+  --my-space: 6rem;
+}
+
+.footer {
+  --my-space: 5rem;
+}
+
+.legal {
+  --my-space: 3.25rem;
+}
+
+
+/* components */
+
+.title {
+  font-size: 2.125rem;
+  font-weight: var(--fw-200);
+}
+
+.btn {
+  text-decoration: none;
+  color: var(--clr-neutral-900);
+  font-size: .875rem;
+  font-family: var(--ff-sans);
+  font-weight: var(--fw-700);
+  display: inline-block;
+
+}
+
+.btn:hover {
+  text-decoration: underline;
+}
+
+
