--- a/style.css
+++ b/style.css
@@ -39,13 +39,15 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  font-size: 1em;
 }
 
 body {
   font-family: var(--ff-serif);
+  color: var(--clr-neutral-900);
   line-height: 1.6;
   margin: 0;
-  padding: 0;
+  padding: 1.5rem;
 }
 
 h1,
@@ -70,8 +72,14 @@ ol[class] {
 
 /* genral layout */
 
+header {
+  max-width: 77rem;
+  margin: auto;
+  position: relative;
+}
+
 section {
-  padding:var(--my-space, calc(var(--br) * 2)) var(--br); 
+  padding:var(--my-space, calc(var(--br) * 2)) 0; 
 }
 
 .flow-content-large > * + * {
@@ -82,8 +90,52 @@ section {
   margin-top: var(--br);
 }
 
+.sans {
+  font-family: var(--ff-sans);
+}
 
+.split {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+.split-start {
+  display: flex;
+  gap: 3.5rem;
+}
+
+.split-between {
+  display: flex;
+  gap: 2.5rem;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+@media (min-width: 540px) {
+  .split {
+    flex-direction: row;
+  }
+  .split-between {
+    flex-direction: row;
+  }
+}
 /* genral styling */
+
+header img {
+  border-radius: 1rem;
+  height: 28.5rem;
+  object-fit: cover;
+}
+
+@media (max-width: 720px) {
+  header img {
+    height: 19rem;
+  }
+}
 
 .container {
   max-width: 50rem;
@@ -100,14 +152,17 @@ section {
 
 .blog {
   --my-space: 6rem;
+  --accent: var(--clr-neutral-400);
 }
 
 .inbox {
   --my-space: 6rem;
+  --accent: var(--clr-neutral-400);
 }
 
 .footer {
   --my-space: 5rem;
+  font-family: var(--ff-sans);
 }
 
 .legal {
@@ -115,11 +170,78 @@ section {
 }
 
 
+/* typography */
+
+.heading-large {
+  font-size: 4rem;
+  line-height: 1.1;
+  font-weight: var(--fw-200);
+}
+
+.heading-medium {
+  font-size: 2.125rem;
+  line-height: 1.4;
+  font-weight: var(--fw-200);
+}
+
+.heading-small {
+  font-size: 1.75rem;
+  line-height: 1.3;
+  font-weight: var(--fw-200);
+}
+
+.text-large {
+  font-size: 1.25rem;
+  line-height: 1.4;
+  font-weight: var(--fw-300);
+}
+
+.text-medium {
+  font-size: .9375rem;
+  line-height: 1.8;
+  font-weight: var(--fw-300);
+}
+
+.text-small {
+  font-size: .75rem;
+  line-height: 2;
+  font-weight: var(--fw-200);
+  color: var(--accent ,var(--clr-neutral-900));
+}
+
+
 /* components */
+.outline {
+  outline: 3px solid red;
+}
+
+
+
+.navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2.5rem;
+  flex-direction: row;
+}
+
+.navbar__pages {
+  width: 20%;
+  flex-direction: row;
+}
+@media (max-width: 720px) {
+  .navbar__pages {
+    display: none;
+  }
+}
+
+
 
 .title {
   font-size: 2.125rem;
   font-weight: var(--fw-200);
+  color: var(--clr-neutral-400);
 }
 
 .btn {
@@ -135,5 +257,67 @@ section {
 .btn:hover {
   text-decoration: underline;
 }
+
+
+.card {
+  flex-basis: 100%;
+}
+.card img {
+  border-radius: 1rem;
+  height: 15rem;
+  object-fit: cover;
+}
+
+
+
+.inbox__input {
+  flex-basis: 100%;
+}
+
+.inbox__input input {
+  width: 100%;
+}
+
+.footer__links {
+  align-items: flex-start;
+  width: 50%;
+}
+
+.legal__social {
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+@media (min-width: 540px) {
+  .card {
+    flex-basis: calc(50% - (2.5rem)/2);
+  }
+  .inbox__input {
+    flex-basis: calc(50% - (2.5rem)/2);
+  }
+  .inbox__button {
+    flex-grow: 1;
+  }
+  .inbox__form {
+    align-items: flex-end;
+  }
+}
+
+@media (min-width: 720px) {
+  .card {
+    flex-basis: calc(33.33% - (2 * 2.5rem)/3);
+  }
+  .inbox__input {
+    flex-basis: calc(40% - (2 * 2.5rem)/3);
+  }
+  .inbox__button {
+    flex-grow: 1;
+  }
+  .inbox__form {
+    align-items: flex-end;
+  }
+  
+}
+
 
 
